Sprint_8: fix: Добавить установку path, Убрать TODO